# ultimate-go

./: .gitignore  LICENSE.txt  Readme.md  TYPE.pprof  go.mod  go.sum  go_module.md  main.go  main_test.go  people.csv  readme.md  trace.out
Language_Specification/: basics.go  hello-world.go  values.go  variables.go
Language_Specification/build-in-function/: append_vs_copy.go  builtin.go  make_vs_new.go  panic_and_recover.go
Language_Specification/cgo/: cgo.go
Language_Specification/constant/: constant.go
Language_Specification/conversions/: conversions.go
Language_Specification/enum/: enum.go
Language_Specification/errors/: errors.go
Language_Specification/exporting/: exporting.go
Language_Specification/expressions/: expressions.go  index_expressions.go  literals.go  method_expressions.go
LearnConcurrency/: learn_concurrency.md
algorithms/: algorithms.md
archive/: archive.go
awesome-go/: bcrypttest.go  test.go  toml.go
awesome-go/bazel/go-tutorial/test/: BUILD.bazel  init_server.go
awesome-go/cli/: cli.go  (+1 more)
design-pattern/: readme.md
diagnostics/: readme.md
docker/: Dockerfile  docker-compose-unittest.yml  go-demo  main.go  main_test.go
go_memory_model/: allocation_on_the_heap.go  go_bug.go
kubernetes/: test.json
mock/: readme.md
object_oriented/: readme.md
snippets/: function.go  iota.go  tools.go
utils/: array.go  array_test.go  ctx.go  ctx_test.go  encrypt.go  encrypt_test.go  network.go  network_test.go  str.go  str_test.go  struct.go  struct_test.go  utils.go  utils_test.go
welcome/: closures.go  constants.go  enumtest.go
(+735 files in other folders)
